Added products controller, some images to test

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,10 @@
   <h3><%= prod.name %> </h3>
   <p>Price: <%= prod.price %></p>
   <p>Description: <%= prod.description %></p>
+  <p><%= image_tag prod.image %></p>
 
  <%end %>
 
  <%end %>
+
+ 
