--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,466 @@
     <title>Project</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= render partial: 'common/header' %>
+    <!-- <%= render partial: 'common/header' %> -->
+    <!-- Off screen navigation -->
+    <div id="sidr">
+      <ul>
+        <li>
+          <a class="side-logo" href="index.html">Chair<span class="logo-dot accent-bg"></span></a>
+        </li>
+        <li class="active">
+          <a href="index.html#">Modern Chairs</a>
+        </li>
+        <li>
+          <a href="index.html#">Sofas</a>
+        </li>
+        <li>
+          <a href="index.html#">Handmade</a>
+        </li>
+        <li>
+          <a href="index.html#">Industrial</a>
+        </li>
+        <li>
+          <a href="index.html#">For office</a>
+        </li>
+        <li class="divider">
+          <span></span></li>
+        <li>
+          <a href="privacy.html">Privacy</a>
+        </li>
+        <li>
+          <a href="terms.html">Terms & conditions</a>
+        </li>
+        <li>
+          <a href="404.html">404 Error</a>
+        </li>
+      </ul>
+
+      <div class="side-social">
+        <a href="index.html#">
+          <i class="fa fa-facebook"></i>
+        </a>
+        <a href="index.html#">
+          <i class="fa fa-twitter"></i>
+        </a>
+        <a href="index.html#">
+          <i class="fa fa-google-plus"></i>
+        </a>
+        <a href="index.html#">
+          <i class="fa fa-pinterest"></i>
+        </a>
+        <a href="index.html#">
+          <i class="fa fa-instagram"></i>
+        </a>
+      </div>
+    </div>
+
+    <div class="nav-container">
+      <nav class="navbar navbar-default">
+        <div class="container">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-navigation" aria-expanded="false">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html">THC-easoned<span class="logo-dot accent-bg"></span></a>
+            <a href="index.html#sidr" class="side-menu-opener mobile">
+              <div class="bars">
+                <span class="bar top"></span>
+                <span class="bar middle"></span>
+                <span class="bar bottom"></span>
+              </div>
+            </a>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="collapse-navigation">
+            <ul class="nav navbar-nav">
+              <li class="dropdown">
+                <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Home
+                  <span class="fa fa-angle-down"></span></a>
+                <ul class="dropdown-menu">
+                  <li class="active">
+                    <a href="index.html">Home Grid</a>
+                  </li>
+                  <li>
+                    <a href="index-list.html">Home List</a>
+                  </li>
+                  <li>
+                    <a href="index-full-width.html">Home Full</a>
+                  </li>
+                  <li>
+                    <a href="index-slider.html">Home Slider</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="about.html">About</a>
+              </li>
+              <li class="dropdown">
+                <a href="products.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Products
+                  <span class="fa fa-angle-down"></span></a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a href="products.html">All Products</a>
+                  </li>
+                  <li>
+                    <a href="products-list.html">Catalog List</a>
+                  </li>
+                  <li>
+                    <a href="products-full-width.html">Catalog Full</a>
+                  </li>
+                  <li>
+                    <a href="product.html">Single Product</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="blog.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Blog
+                  <span class="fa fa-angle-down"></span></a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a href="blog.html">Blog</a>
+                  </li>
+                  <li>
+                    <a href="blog-list.html">Blog List</a>
+                  </li>
+                  <li>
+                    <a href="blog-single.html">Blog Single</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="contact.html">
+                  <i class="fa fa-paper-plane"></i>
+                  Contact</a>
+              </li>
+              <li>
+                <a href="index.html#" class="menu-cart">
+                  <i class="fa fa-shopping-cart"></i>
+                  $0.00</a>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li>
+                <a href="index.html#sidr" class="side-menu-opener">
+                  <div class="bars">
+                    <span class="bar top"></span>
+                    <span class="bar middle"></span>
+                    <span class="bar bottom"></span>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+      </nav>
+    </div>
+
+    <div class="main-container">
+      <header class="fullscreen-element">
+        <div class="background-image-holder parallax-background overlay">
+          <%= image_tag('bg-7.jpg', class: 'background-image', alt:'Background') %>
+        </div>
+
+        <div class="container align-vertical hero">
+          <div class="row">
+            <div class="col-md-5 col-sm-5 col-md-offset-7 col-sm-offset-7 text-left">
+              <h1>Modern Chair</h1>
+              <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates depudiandae sint et molestiae.</p>
+              <div class="button-group">
+                <a href="index.html#" class="btn btn-default">Purchase</a>
+                <a href="index.html#" class="btn btn-primary">Shop Now</a>
+              </div>
+            </div>
+          </div>
+          <!--end of row-->
+        </div>
+        <!--end of container-->
+      </header>
+
+      <div class="action-bar">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <a href="index.html#">
+                <span data-icon="v" class="icon"></span>
+                <span class="text">Fast Delivery</span></a>
+            </div>
+            <div class="col-sm-4">
+              <a href="index.html#">
+                <span data-icon="/" class="icon"></span>
+                <span class="text">Adjustable</span></a>
+            </div>
+            <div class="col-sm-4">
+              <a href="index.html#">
+                <span data-icon="7" class="icon"></span>
+                <span class="text">Inovative</span></a>
+            </div>
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- /.container -->
+      </div>
+
+      <section>
+        <div class="background-image-holder overlay">
+          <%= image_tag('bg-2.jpg', class: 'background-image', alt:'Background') %>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-5 text-left">
+              <h2 class="page-title">For your familly</h2>
+              <p class="description">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates depudiandae sint et molestiae.</p>
+              <a href="index.html#" class="btn btn-primary">Shop Now</a>
+            </div>
+          </div>
+          <!--end of row-->
+        </div>
+        <!--end of container-->
+      </section>
+
+      <section class="products-grid">
+        <div class="container">
+          <div class="row products-container">
+            <div class="col-md-4 col-sm-6 col-xs-12 product">
+              <div class="thumbnail" style="background-image: url('assets/products/1.jpg');">
+                <div class="product-details text-center">
+                  <div class="align-vertical">
+                    <h3>Yellow chair</h3>
+                    <a href="index.html#" class="btn btn-primary">
+                      <i class="fa fa-shopping-cart"></i>
+                      Add to cart</a>
+                    <p class="product-price">$90</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 product">
+              <div class="thumbnail" style="background-image: url('assets/products/2.jpg');">
+                <div class="product-details text-center">
+                  <div class="align-vertical">
+                    <h3>Sofa</h3>
+                    <a href="index.html#" class="btn btn-primary">
+                      <i class="fa fa-shopping-cart"></i>
+                      Add to cart</a>
+                    <p class="product-price">$90</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 product">
+              <div class="thumbnail" style="background-image: url('assets/products/3.jpg');">
+                <div class="product-details text-center">
+                  <div class="align-vertical">
+                    <h3>Clasic chair</h3>
+                    <a href="index.html#" class="btn btn-primary">
+                      <i class="fa fa-shopping-cart"></i>
+                      Add to cart</a>
+                    <p class="product-price">$90</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12 product">
+              <div class="thumbnail" style="background-image: url('assets/products/4.jpg');">
+                <div class="product-details text-center">
+                  <div class="align-vertical">
+                    <h3>Leather chair</h3>
+                    <a href="index.html#" class="btn btn-primary">
+                      <i class="fa fa-shopping-cart"></i>
+                      Add to cart</a>
+                    <p class="product-price">$90</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 product">
+              <div class="thumbnail" style="background-image: url('assets/products/5.jpg');">
+                <div class="product-details text-center">
+                  <div class="align-vertical">
+                    <h3>Blue chair</h3>
+                    <a href="index.html#" class="btn btn-primary">
+                      <i class="fa fa-shopping-cart"></i>
+                      Add to cart</a>
+                    <p class="product-price">$90</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 product">
+              <div class="thumbnail" style="background-image: url('assets/products/6.jpg');">
+                <div class="product-details text-center">
+                  <div class="align-vertical">
+                    <h3>Orange chair</h3>
+                    <a href="index.html#" class="btn btn-primary">
+                      <i class="fa fa-shopping-cart"></i>
+                      Add to cart</a>
+                    <p class="product-price">$90</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6 col-xs-12 product">
+              <div class="thumbnail" style="background-image: url('assets/products/2.jpg');">
+                <div class="product-details text-center">
+                  <div class="align-vertical">
+                    <h3>Sofa</h3>
+                    <a href="index.html#" class="btn btn-primary">
+                      <i class="fa fa-shopping-cart"></i>
+                      Add to cart</a>
+                    <p class="product-price">$90</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 product">
+              <div class="thumbnail" style="background-image: url('assets/products/1.jpg');">
+                <div class="product-details text-center">
+                  <div class="align-vertical">
+                    <h3>Yellow chair</h3>
+                    <a href="index.html#" class="btn btn-primary">
+                      <i class="fa fa-shopping-cart"></i>
+                      Add to cart</a>
+                    <p class="product-price">$90</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12 product">
+              <div class="thumbnail" style="background-image: url('assets/products/3.jpg');">
+                <div class="product-details text-center">
+                  <div class="align-vertical">
+                    <h3>Clasic chair</h3>
+                    <a href="index.html#" class="btn btn-primary">
+                      <i class="fa fa-shopping-cart"></i>
+                      Add to cart</a>
+                    <p class="product-price">$90</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- /.container -->
+      </section>
+
+      <section>
+        <div class="background-image-holder overlay">
+          <%= image_tag('bg-3.jpg', class: 'background-image', alt:'Background') %>
+
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-5 col-sm-offset-7 text-right">
+              <h2 class="page-title">Modern Chair<span class="accent-color">.</span></h2>
+              <p class="description">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates depudiandae sint et molestiae.</p>
+              <a href="index.html#" class="btn btn-primary">Shop Now</a>
+            </div>
+          </div>
+          <!--end of row-->
+        </div>
+        <!--end of container-->
+      </section>
+
+      <section class="newsletter accent-bg">
+        <div class="background-image-holder overlay accent">
+          <%= image_tag('bg-4.jpg', class: 'background-image', alt:'Background') %>
+
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-5 text-left">
+              <h2 class="page-title">Join our newsletter</h2>
+              <p>Bemporibus autem quibusdam et aut officiis debitis autem quibusdam et aut officiis debitis.</p>
+            </div>
+            <div class="col-md-4">
+              <form class="newsletter-form">
+                <input type="text" name="email" id="email" placeholder="Your email address">
+              </form>
+            </div>
+            <div class="col-md-3">
+              <a href="index.html#" class="btn btn-primary">Join Now</a>
+            </div>
+          </div>
+          <!--end of row-->
+        </div>
+        <!--end of container-->
+      </section>
+
+      <footer class="footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+              <ul class="footer-navigation">
+                <li class="active">
+                  <a href="index.html">Home</a>
+                </li>
+                <li>
+                  <a href="about.html">About</a>
+                </li>
+                <li>
+                  <a href="catalog.html">Catalog</a>
+                </li>
+                <li>
+                  <a href="blog.html">Blog</a>
+                </li>
+                <li>
+                  <a href="contact.html">
+                    <i class="fa fa-paper-plane"></i>
+                    Contact</a>
+                </li>
+              </ul>
+              <ul class="accepted-payments">
+                <li>
+                  <a href="index.html#">
+                    <i class="fa fa-cc-amex"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="index.html#">
+                    <i class="fa fa-cc-visa"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="index.html#">
+                    <i class="fa fa-paypal"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="index.html#">
+                    <i class="fa fa-cc-stripe"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="index.html#">
+                    <i class="fa fa-cc-mastercard"></i>
+                  </a>
+                </li>
+              </ul>
+              <div class="copyright">
+                <p>Copyright © 2015 Chair. Created by Designifyer.com</p>
+              </div>
+            </div>
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- /.container -->
+      </footer>
+    </div>
+    <!-- /.main-container -->
     <%= yield %>
   </body>
 </html>
