Resolved Heroku Issue, updated development.rb to reload server pages quicker, created header partial

--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -1,7 +1,20 @@
-<header>
-<nav>
-<ul>
-<li><%= link_to 'Home', :home %> </li>
-<li><%= link_to 'All Products', :all_products %> </li>
-</nav>
+<header class="fullscreen-element">
+  <div class="background-image-holder parallax-background overlay">
+    <%= image_tag('bg-7.jpg', class: 'background-image', alt:'Background') %>
+  </div>
+
+  <div class="container align-vertical hero">
+    <div class="row">
+      <div class="col-md-5 col-sm-5 col-md-offset-7 col-sm-offset-7 text-left">
+        <h1>THC-easoned to perfection</h1>
+        <p>Nothing but the finest craft cannabis that our country has to offer</p>
+        <div class="button-group">
+          <a href="index.html#" class="btn btn-default">Purchase</a>
+          <a href="index.html#" class="btn btn-primary">Shop Now</a>
+        </div>
+      </div>
+    </div>
+    <!--end of row-->
+  </div>
+  <!--end of container-->
 </header>
