Customized sidr bar and created partial for it

--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,3 +1,26 @@
+<section class="newsletter accent-bg">
+  <div class="background-image-holder overlay accent">
+    <%= image_tag('bg-4.jpg', class: 'background-image', alt:'Background') %>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-5 text-left">
+        <h2 class="page-title">Join our newsletter</h2>
+        <p>Bemporibus autem quibusdam et aut officiis debitis autem quibusdam et aut officiis debitis.</p>
+      </div>
+      <div class="col-md-4">
+        <form class="newsletter-form">
+          <input type="text" name="email" id="email" placeholder="Your email address">
+        </form>
+      </div>
+      <div class="col-md-3">
+        <a href="index.html#" class="btn btn-primary">Join Now</a>
+      </div>
+    </div>
+    <!--end of row-->
+  </div>
+  <!--end of container-->
+</section>
 <footer class="footer">
   <div class="container">
     <div class="row">
