--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,295 @@
-<%= render partial: 'product', collection: @products, locals: {display_link: true} %>
+<!-- <%= render partial: 'product', collection: @products, locals: {display_link: true} %> -->
+<div class="nav-container">
+  <nav class="navbar navbar-default">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-navigation" aria-expanded="false">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">THC-easoned<span class="logo-dot accent-bg"></span></a>
+        <a href="index.html#sidr" class="side-menu-opener mobile">
+          <div class="bars">
+            <span class="bar top"></span>
+            <span class="bar middle"></span>
+            <span class="bar bottom"></span>
+          </div>
+        </a>
+      </div>
+
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="collapse-navigation">
+        <ul class="nav navbar-nav">
+          <li class="dropdown">
+            <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Home
+              <span class="fa fa-angle-down"></span></a>
+            <ul class="dropdown-menu">
+              <li class="active">
+                <a href="index.html">Home Grid</a>
+              </li>
+              <li>
+                <a href="index-list.html">Home List</a>
+              </li>
+              <li>
+                <a href="index-full-width.html">Home Full</a>
+              </li>
+              <li>
+                <a href="index-slider.html">Home Slider</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li class="dropdown">
+            <a href="products.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Products
+              <span class="fa fa-angle-down"></span></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="products.html">All Products</a>
+              </li>
+              <li>
+                <a href="products-list.html">Catalog List</a>
+              </li>
+              <li>
+                <a href="products-full-width.html">Catalog Full</a>
+              </li>
+              <li>
+                <a href="product.html">Single Product</a>
+              </li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="blog.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Blog
+              <span class="fa fa-angle-down"></span></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="blog.html">Blog</a>
+              </li>
+              <li>
+                <a href="blog-list.html">Blog List</a>
+              </li>
+              <li>
+                <a href="blog-single.html">Blog Single</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="contact.html">
+              <i class="fa fa-paper-plane"></i>
+              Contact</a>
+          </li>
+          <li>
+            <a href="index.html#" class="menu-cart">
+              <i class="fa fa-shopping-cart"></i>
+              $0.00</a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <a href="index.html#sidr" class="side-menu-opener">
+              <div class="bars">
+                <span class="bar top"></span>
+                <span class="bar middle"></span>
+                <span class="bar bottom"></span>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
+</div>
+<%= render partial: 'common/header' %>
+<div class="main-container">
+
+  <div class="action-bar">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <a href="index.html#">
+            <span data-icon="v" class="icon"></span>
+            <span class="text">Fast Delivery</span></a>
+        </div>
+        <div class="col-sm-4">
+          <a href="index.html#">
+            <span data-icon="/" class="icon"></span>
+            <span class="text">Multiple Varieties</span></a>
+        </div>
+        <div class="col-sm-4">
+          <a href="index.html#">
+            <span data-icon="7" class="icon"></span>
+            <span class="text">Latest Products</span></a>
+        </div>
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </div>
+
+  <section>
+    <div class="background-image-holder overlay">
+      <%= image_tag('bg-2.jpg', class: 'background-image', alt:'Background') %>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-5 text-left">
+          <h2 class="page-title">For your familly</h2>
+          <p class="description">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates depudiandae sint et molestiae.</p>
+          <a href="index.html#" class="btn btn-primary">Shop Now</a>
+        </div>
+      </div>
+      <!--end of row-->
+    </div>
+    <!--end of container-->
+  </section>
+
+  <section class="products-grid">
+    <div class="container">
+      <div class="row products-container">
+        <div class="col-md-4 col-sm-6 col-xs-12 product">
+          <div class="thumbnail" style="background-image: url('assets/products/1.jpg');">
+            <div class="product-details text-center">
+              <div class="align-vertical">
+                <h3>Yellow chair</h3>
+                <a href="index.html#" class="btn btn-primary">
+                  <i class="fa fa-shopping-cart"></i>
+                  Add to cart</a>
+                <p class="product-price">$90</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 col-xs-12 product">
+          <div class="thumbnail" style="background-image: url('assets/products/2.jpg');">
+            <div class="product-details text-center">
+              <div class="align-vertical">
+                <h3>Sofa</h3>
+                <a href="index.html#" class="btn btn-primary">
+                  <i class="fa fa-shopping-cart"></i>
+                  Add to cart</a>
+                <p class="product-price">$90</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 col-xs-12 product">
+          <div class="thumbnail" style="background-image: url('assets/products/3.jpg');">
+            <div class="product-details text-center">
+              <div class="align-vertical">
+                <h3>Clasic chair</h3>
+                <a href="index.html#" class="btn btn-primary">
+                  <i class="fa fa-shopping-cart"></i>
+                  Add to cart</a>
+                <p class="product-price">$90</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-sm-6 col-xs-12 product">
+          <div class="thumbnail" style="background-image: url('assets/products/4.jpg');">
+            <div class="product-details text-center">
+              <div class="align-vertical">
+                <h3>Leather chair</h3>
+                <a href="index.html#" class="btn btn-primary">
+                  <i class="fa fa-shopping-cart"></i>
+                  Add to cart</a>
+                <p class="product-price">$90</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 col-xs-12 product">
+          <div class="thumbnail" style="background-image: url('assets/products/5.jpg');">
+            <div class="product-details text-center">
+              <div class="align-vertical">
+                <h3>Blue chair</h3>
+                <a href="index.html#" class="btn btn-primary">
+                  <i class="fa fa-shopping-cart"></i>
+                  Add to cart</a>
+                <p class="product-price">$90</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 col-xs-12 product">
+          <div class="thumbnail" style="background-image: url('assets/products/6.jpg');">
+            <div class="product-details text-center">
+              <div class="align-vertical">
+                <h3>Orange chair</h3>
+                <a href="index.html#" class="btn btn-primary">
+                  <i class="fa fa-shopping-cart"></i>
+                  Add to cart</a>
+                <p class="product-price">$90</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 col-sm-6 col-xs-12 product">
+          <div class="thumbnail" style="background-image: url('assets/products/2.jpg');">
+            <div class="product-details text-center">
+              <div class="align-vertical">
+                <h3>Sofa</h3>
+                <a href="index.html#" class="btn btn-primary">
+                  <i class="fa fa-shopping-cart"></i>
+                  Add to cart</a>
+                <p class="product-price">$90</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 col-xs-12 product">
+          <div class="thumbnail" style="background-image: url('assets/products/1.jpg');">
+            <div class="product-details text-center">
+              <div class="align-vertical">
+                <h3>Yellow chair</h3>
+                <a href="index.html#" class="btn btn-primary">
+                  <i class="fa fa-shopping-cart"></i>
+                  Add to cart</a>
+                <p class="product-price">$90</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-sm-6 col-xs-12 product">
+          <div class="thumbnail" style="background-image: url('assets/products/3.jpg');">
+            <div class="product-details text-center">
+              <div class="align-vertical">
+                <h3>Clasic chair</h3>
+                <a href="index.html#" class="btn btn-primary">
+                  <i class="fa fa-shopping-cart"></i>
+                  Add to cart</a>
+                <p class="product-price">$90</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </section>
+
+  <section>
+    <div class="background-image-holder overlay">
+      <%= image_tag('bg-3.jpg', class: 'background-image', alt:'Background') %>
+
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-5 col-sm-offset-7 text-right">
+          <h2 class="page-title">Modern Chair<span class="accent-color">.</span></h2>
+          <p class="description">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates depudiandae sint et molestiae.</p>
+          <a href="index.html#" class="btn btn-primary">Shop Now</a>
+        </div>
+      </div>
+      <!--end of row-->
+    </div>
+    <!--end of container-->
+  </section>
