Added featured page to products, shows featured products. updated images in active admin

--- a/app/views/common/_sidr.html.erb
+++ b/app/views/common/_sidr.html.erb
@@ -4,7 +4,7 @@
       <a class="side-logo" href="index.html">THCeasoned<span class="logo-dot accent-bg"></span></a>
     </li>
     <li class="active">
-      <a href="index.html#">All Products</a>
+      <%= link_to 'Store', :store %>
     </li>
     <li>
       <a href="index.html#">Edibles</a>
