--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,16 +1,18 @@
 <h1>Welcome to THC-easoned Edibles</h1>
 <h2>All Categories</h2>
 <% @categories.each do |cat| %>
- <h3><%= cat.name %> </h3>
+  <h3><%= cat.name %>
+  </h3>
 
- <% cat.products.each do |prod| %>
-  <h3><%= prod.name %> </h3>
-  <p>Price: <%= prod.price %></p>
-  <p>Description: <%= prod.description %></p>
-  <p><%= image_tag prod.image %></p>
+  <% cat.products.each do |prod| %>
+    <h3><%= prod.name %>
+    </h3>
+    <p>Price:
+      <%= prod.price %></p>
+    <p>Description:
+      <%= prod.description %></p>
+    <p><%= image_tag prod.image %></p>
 
- <%end %>
+  <%end %>
 
- <%end %>
-
- 
+<%end %>
