--- a/app/views/common/_list.html.erb
+++ b/app/views/common/_list.html.erb
@@ -2,7 +2,23 @@
   <div class="container">
     <div class="row products-container">
       <% @products.each do |product| %>
-        <% if product.id <= 10 %>
+        <% if display_all_products %>
+          <div class="col-md-4 col-sm-6 col-xs-12 product">
+            <div class="thumbnail" style="background-image: url('/assets/products/<%= product.image_file_name %>');">
+              <div class="product-details text-center">
+                <div class="align-vertical">
+                  <h3><%= product.name %></h3>
+                  <a href="index.html#" class="btn btn-primary">
+                    <i class="fa fa-shopping-cart"></i>
+                    Add to cart</a>
+                  <p class="product-price">
+                    <%= number_to_currency product.price %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+        <% if display_featured && product.id <= 10 %>
           <div class="col-md-4 col-sm-6 col-xs-12 product">
             <div class="thumbnail" style="background-image: url('/assets/products/<%= product.image_file_name %>');">
               <div class="product-details text-center">
