--- a/app/views/products/featured.html.erb
+++ b/app/views/products/featured.html.erb
@@ -1,3 +1,3 @@
 <br>
 <h2 class="page-title text-center">Featured Products</h2>
-<%= render partial: 'common/list' %>
+<%= render partial: 'common/list' , locals: {display_all_products:false}%>
