--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,3 @@
 <br>
 <h2 class="page-title text-center">All Products</h2>
-<%= render partial: 'common/list' %>
+<%= render partial: 'common/list' , locals: {display_all_products:true, display_featured:false}%>
