Added search feature for products.

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,8 @@
 <br>
 <h2 class="page-title text-center">All Products</h2>
+
+<% if @products.blank? %>
+  <h4>There are no products containing the term
+    <%= params[:search] %>.</h4>
+<% end %>
 <%= render partial: 'common/list' , locals: {display_all_products:true, display_featured:false}%>
