--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,82 +1,85 @@
 <section class="newsletter accent-bg">
   <div class="background-image-holder overlay accent">
-    <%= image_tag('bg-4.jpg', class: 'background-image', alt:'Background') %>
+    <%= image_tag('smell.jpg', class: 'background-image', alt:'Background') %>
   </div>
   <div class="container">
     <div class="row">
       <div class="col-md-5 text-left">
-        <h2 class="page-title">Join our newsletter</h2>
-        <p>Bemporibus autem quibusdam et aut officiis debitis autem quibusdam et aut officiis debitis.</p>
+        <h2 class="page-title">Search for your strains</h2>
+        <p>High Quality, Lab Tested Products</p>
       </div>
       <div class="col-md-4">
         <form class="newsletter-form">
-          <input type="text" name="email" id="email" placeholder="Your email address">
+          <%= form_tag(all_products_path, :method => "get", id: "search-form") do %>
+          <%= text_field_tag :search, params[:search], placeholder: "Search Strains" %>
+
         </form>
       </div>
       <div class="col-md-3">
-        <a href="index.html#" class="btn btn-primary">Join Now</a>
-      </div>
+        <%= submit_tag "Search", :name => nil %>
+      <% end %>
     </div>
-    <!--end of row-->
   </div>
-  <!--end of container-->
+  <!--end of row-->
+</div>
+<!--end of container-->
 </section>
 <footer class="footer">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <ul class="footer-navigation">
-          <li class="active">
-            <a href="index.html">Home</a>
-          </li>
-          <li>
-            <a href="about.html">About</a>
-          </li>
-          <li>
-            <a href="catalog.html">Catalog</a>
-          </li>
-          <li>
-            <a href="blog.html">Blog</a>
-          </li>
-          <li>
-            <a href="contact.html">
-              <i class="fa fa-paper-plane"></i>
-              Contact</a>
-          </li>
-        </ul>
-        <ul class="accepted-payments">
-          <li>
-            <a href="index.html#">
-              <i class="fa fa-cc-amex"></i>
-            </a>
-          </li>
-          <li>
-            <a href="index.html#">
-              <i class="fa fa-cc-visa"></i>
-            </a>
-          </li>
-          <li>
-            <a href="index.html#">
-              <i class="fa fa-paypal"></i>
-            </a>
-          </li>
-          <li>
-            <a href="index.html#">
-              <i class="fa fa-cc-stripe"></i>
-            </a>
-          </li>
-          <li>
-            <a href="index.html#">
-              <i class="fa fa-cc-mastercard"></i>
-            </a>
-          </li>
-        </ul>
-        <div class="copyright">
-          <p>Copyright © 2015 Chair. Created by Designifyer.com</p>
-        </div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <ul class="footer-navigation">
+        <li class="active">
+          <a href="index.html">Home</a>
+        </li>
+        <li>
+          <a href="about.html">About</a>
+        </li>
+        <li>
+          <a href="catalog.html">Catalog</a>
+        </li>
+        <li>
+          <a href="blog.html">Blog</a>
+        </li>
+        <li>
+          <a href="contact.html">
+            <i class="fa fa-paper-plane"></i>
+            Contact</a>
+        </li>
+      </ul>
+      <ul class="accepted-payments">
+        <li>
+          <a href="index.html#">
+            <i class="fa fa-cc-amex"></i>
+          </a>
+        </li>
+        <li>
+          <a href="index.html#">
+            <i class="fa fa-cc-visa"></i>
+          </a>
+        </li>
+        <li>
+          <a href="index.html#">
+            <i class="fa fa-paypal"></i>
+          </a>
+        </li>
+        <li>
+          <a href="index.html#">
+            <i class="fa fa-cc-stripe"></i>
+          </a>
+        </li>
+        <li>
+          <a href="index.html#">
+            <i class="fa fa-cc-mastercard"></i>
+          </a>
+        </li>
+      </ul>
+      <div class="copyright">
+        <p>Copyright © 2017 THCeasoned. Created by Captin Crohns</p>
       </div>
     </div>
-    <!-- /.row -->
   </div>
-  <!-- /.container -->
+  <!-- /.row -->
+</div>
+<!-- /.container -->
 </footer>
