--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,4 +5,9 @@
   <h4>There are no products containing the term
     <%= params[:search] %>.</h4>
 <% end %>
+<% if @categories.blank? %>
+  <h4>There are no categories containing the term
+    <%= params[:search] %>.</h4>
+<% end %>
+
 <%= render partial: 'common/list' , locals: {display_all_products:true, display_featured:false}%>
