--- a/app/views/common/_sidr.html.erb
+++ b/app/views/common/_sidr.html.erb
@@ -4,7 +4,7 @@
       <a class="side-logo" href="index.html">THCeasoned<span class="logo-dot accent-bg"></span></a>
     </li>
     <li class="active">
-      <%= link_to 'Store', :store %>
+      <%= link_to 'Store', :all_products %>
     </li>
     <li>
       <a href="index.html#">Edibles</a>
@@ -28,9 +28,6 @@
     </li>
     <li>
       <a href="terms.html">Terms & conditions</a>
-    </li>
-    <li>
-      <a href="404.html">404 Error</a>
     </li>
   </ul>
 
