--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="fullscreen-element">
 
   <div class="background-image-holder parallax-background overlay">
-    <%= image_tag('bg-7.jpg', class: 'background-image', alt:'Background') %>
+    <!-- <%= image_tag('bg-7.jpg', class: 'background-image', alt:'Background') %> -->
   </div>
 
   <div class="container align-vertical hero">
