--- a/app/views/common/_list.html.erb
+++ b/app/views/common/_list.html.erb
@@ -34,6 +34,23 @@
             </div>
           </div>
         <% end %>
+        <% if display_single_product %>
+          <div class="col-md-4 col-sm-6 col-xs-12 product">
+            <div class="thumbnail" style="background-image: url('/assets/products/<%= product.image_file_name %>');">
+              <div class="product-details text-center">
+                <div class="align-vertical">
+                  <h3><%= product.name %></h3>
+                  <a href="index.html#" class="btn btn-primary">
+                    <i class="fa fa-shopping-cart"></i>
+                    Add to cart</a>
+                  <p class="product-price">
+                    <%= number_to_currency product.price %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+
       <% end %>
     </div>
     <!-- /.row -->
