--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -165,27 +165,10 @@
         <!--end of container-->
       </section>
 
-      <section>
-        <div class="background-image-holder overlay">
-          <%= image_tag('bg-3.jpg', class: 'background-image', alt:'Background') %>
-
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-5 col-sm-offset-7 text-right">
-              <h2 class="page-title">Modern Chair<span class="accent-color">.</span></h2>
-              <p class="description">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates depudiandae sint et molestiae.</p>
-              <a href="index.html#" class="btn btn-primary">Shop Now</a>
-            </div>
-          </div>
-          <!--end of row-->
-        </div>
-        <!--end of container-->
-      </section>
-
     </div>
     <!-- /.main-container -->
     <%= yield %>
+    <%= render partial: 'common/ad' %>
     <%= render partial: 'common/footer' %>
   </body>
 </html>
