--- a/app/views/products/shop.html.erb
+++ b/app/views/products/shop.html.erb
@@ -37,6 +37,7 @@
                   <p><%= product.description %></p>
 
                   <a href="#" class="btn btn-default">
+                    <%= link_to 'Store', :all_products %>
                     <i class="fa fa-shopping-cart"></i>
                     Add to cart</a>
                 </div>
