Fixed routing and links for categories, added before_action in the application controller to autopopulate category links

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,2 @@
 <h2 class="page-title text-center">All Categories</h2>
-<%= render partial: 'common/categorylist', collection: @categories %>
+<%= render partial: 'common/categorylist' %>
