--- a/app/views/common/_categorycontents.html.erb
+++ b/app/views/common/_categorycontents.html.erb
@@ -4,15 +4,21 @@
   <div class="container">
     <div class="row products-container">
       <% @category.products.each do |product| %>
-              <div class="col-md-4 col-sm-6 col-xs-12 product">
-            <div class="product-details text-center">
-              <div class="align-vertical">
-                <h3><%= product.name %></h3>
-                  <%= link_to 'View Product', product_path(product), :class => "btn btn-primary" %>
-                  <p class="product-price"></div>
-              </div>
+      <div class="col-md-4 col-sm-6 col-xs-12 product">
+        <div class="thumbnail" style="background-image: url('/assets/products/<%= product.image_file_name %>');">
+          <div class="product-details text-center">
+            <div class="align-vertical">
+              <h3><%= product.name %></h3>
+              <a href="index.html#" class="btn btn-primary">
+                <i class="fa fa-shopping-cart"></i>
+                Add to cart</a>
+              <p class="product-price">
+                <%= number_to_currency product.price %></p>
             </div>
-        <% end %>
+          </div>
+        </div>
+      </div>
+    <% end %>
       </div>
       <!-- /.row -->
     </div>
