Created cart model and controller, along with show view .

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -91,7 +91,6 @@
     </div>
     <%= render partial: 'common/header' %>
     <div class="main-container">
-
       <div class="action-bar">
         <div class="container">
           <div class="row">
@@ -115,20 +114,7 @@
         </div>
         <!-- /.container -->
       </div>
-
-      <section>
-        <div class="background-image-holder overlay">
-          <%= image_tag('bg-2.jpg', class: 'background-image', alt:'Background') %>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-5 text-left">
-              <h2 class="page-title">For your familly</h2>
-              <p class="description">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates depudiandae sint et molestiae.</p>
-              <a href="index.html#" class="btn btn-primary">Shop Now</a>
-            </div>
-          </div>
-          <!--end of row-->
+    <!--  'common/rightad' -->
         </div>
         <!--end of container-->
       </section>
