Created featured products page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,9 +105,9 @@
                 <span class="text">Multiple Varieties</span></a>
             </div>
             <div class="col-sm-4">
-              <a href="index.html#">
+                <a href="index.html#">
                 <span data-icon="7" class="icon"></span>
-                <span class="text">Latest Products</span></a>
+                <span class="text">Featured Products</span></a>
             </div>
           </div>
           <!-- /.row -->
