Fixed cart issues, updated routing for all links.

--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -45,9 +45,7 @@
           <a href="blog.html">Blog</a>
         </li>
         <li>
-          <a href="contact.html">
-            <i class="fa fa-paper-plane"></i>
-            Contact</a>
+            <%= link_to 'Contact', :contact, :class => "fa fa-paper-plane" %>
         </li>
       </ul>
       <ul class="accepted-payments">
