--- a/app/views/common/_sidr.html.erb
+++ b/app/views/common/_sidr.html.erb
@@ -21,7 +21,7 @@
         <%= link_to 'About', :about %>
       </li>
     <li>
-      <a href="terms.html">Terms & conditions</a>
+      <%= link_to 'Contact', :contact %>
     </li>
   </ul>
 
