--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,32 +1,16 @@
-<header class="secondary">
-  <div class="background-image-holder parallax-background overlay">
-    <img class="background-image" alt="Background Image" src="images/bg-5.jpg">
-  </div>
-
-  <div class="container align-vertical hero">
-    <div class="row">
-      <div class="col-md-5 text-left">
-        <h1>Your Cart</h1>
-        <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates depudiandae sint et molestiae.</p>
-      </div>
-    </div>
-    <!--end of row-->
-  </div>
-  <!--end of container-->
-</header>
-
 <section class="product-list">
   <div class="container">
     <div class = "col-md-12">
       <h2>Cart Details</h2>
       <br>
-      <% @cart.product_item.each do |item| %>
-      <ul>
-        <li>
-          <%=item.quantity %>&times;<%= item.product.title %>
-        </li>
-      </ul>
-      <%end %>
+  <%= render 'carts/cart' %>
+  <br>
+  <h5>Total: <%=number_to_currency @cart.total_price %> </h5>
+<br>
+<%= link_to 'Back to Store', all_products_path %>
+<br>
+<%= link_to 'Empty Your Cart', @cart, method: :delete, data: {confirm: 'Are you sure?'} %>
+
         </div>
       </div>
     </section>
