--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,80 +16,10 @@
 
     <%= render partial: 'common/sidr' %>
 
-    <div class="nav-container">
-      <nav class="navbar navbar-default">
-        <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-navigation" aria-expanded="false">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">THC-easoned<span class="logo-dot accent-bg"></span></a>
-            <a href="index.html#sidr" class="side-menu-opener mobile">
-              <div class="bars">
-                <span class="bar top"></span>
-                <span class="bar middle"></span>
-                <span class="bar bottom"></span>
-              </div>
-            </a>
-          </div>
-
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="collapse-navigation">
-            <ul class="nav navbar-nav">
-              <li>
-                <a href="/">Home</a>
-              </li>
-              <li>
-                <%= link_to 'About', :about %>
-              </li>
-              <li class="dropdown">
-                <a href="products.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true">Products
-                  <span class="fa fa-angle-down"></span></a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <%= link_to 'All Products', :all_products %>
-                  </li>
-                  <% @categories.each do |category| %>
-                <li>
-                      <%= link_to category.name, category_path(category) %>
-
-                </li>
-            <% end %>
-                </ul>
-              </li>
-
-              <li>
-                <a href="contact.html">
-                  <i class="fa fa-paper-plane"></i>
-                  Contact</a>
-              </li>
-              <li>
-                <a href="index.html#" class="menu-cart">
-                  <i class="fa fa-shopping-cart"></i>
-                  $0.00</a>
-              </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li>
-                <a href="index.html#sidr" class="side-menu-opener">
-                  <div class="bars">
-                    <span class="bar top"></span>
-                    <span class="bar middle"></span>
-                    <span class="bar bottom"></span>
-                  </div>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-      </nav>
-    </div>
+  
     <%= render partial: 'common/header' %>
+
+    <%= render partial: 'common/message' %>
     <div class="main-container">
       <div class="action-bar">
         <div class="container">
