--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,19 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<section class="about">
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+<h1 class="page-title" style = "text-align:center"><%= @contactPage.title %></span><span class="accent-color">.</span></h1>
+
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <h3>Our Story</h3>
+      <p class="subtitle">Beyond Medication</p>
+    </div>
+    <div class="col-md-8">
+      <%= @contactPage.content %>
+    </div>
+  </div><!-- /.row -->
+</div><!-- /.container -->
+</section>
