--- a/app/views/products/shop.html.erb
+++ b/app/views/products/shop.html.erb
@@ -1,20 +1,4 @@
-<header class="secondary">
-  <div class="background-image-holder parallax-background overlay">
-    <img class="background-image" alt="Background Image" src="images/bg-5.jpg">
-  </div>
-
-  <div class="container align-vertical hero">
-    <div class="row">
-      <div class="col-md-5 text-left">
-        <h1>Our Shop</h1>
-        <p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates depudiandae sint et molestiae.</p>
-      </div>
-    </div>
-    <!--end of row-->
-  </div>
-  <!--end of container-->
-</header>
-
+<h1 class="page-title" style = "text-align:center">Our Store</span><span class="accent-color">.</span></h1>
 <section class="product-list">
   <div class="container">
     <% @products.each do |product| %>
@@ -35,11 +19,10 @@
                   <p class="product-price">
                     <%= number_to_currency product.price %></p>
                   <p><%= product.description %></p>
-
-                  <a href="#" class="btn btn-default">
-                    <%= link_to 'Store', :all_products %>
-                    <i class="fa fa-shopping-cart"></i>
+                  <%= button_to product_items_path(product_id: product), class: 'btn btn-default' do %>
+                      <i class="fa fa-shopping-cart"></i>
                     Add to cart</a>
+                    <% end %>
                 </div>
               </div>
             </div>
