Created order model and orders controller, access to active admin to delete and view all orders. Resolved epic failure situation.

--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -82,7 +82,7 @@
 <header class="fullscreen-element">
 
   <div class="background-image-holder parallax-background overlay">
-    <!-- <%= image_tag('bg-7.jpg', class: 'background-image', alt:'Background') %> -->
+      <%= image_tag('bg-8.jpg', class: 'background-image', alt:'Background') %>
   </div>
 
   <div class="container align-vertical hero">
@@ -91,8 +91,8 @@
         <h1>THC-easoned to perfection</h1>
         <p>Nothing but the finest craft cannabis that our country has to offer</p>
         <div class="button-group">
-          <a href="index.html#" class="btn btn-default">Purchase</a>
-          <a href="index.html#" class="btn btn-primary">Shop Now</a>
+          <a href="index.html#" class="btn btn-default">Shop Now</a>
+
         </div>
       </div>
     </div>
