--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,16 +1,19 @@
 <section class="product-list">
   <div class="container">
-    <div class = "col-md-12">
+    <div class="col-md-12">
       <h2>Cart Details</h2>
       <br>
-  <%= render 'carts/cart' %>
-  <br>
-  <h5>Total: <%=number_to_currency @cart.total_price %> </h5>
-<br>
-<%= link_to 'Back to Store', all_products_path %>
-<br>
-<%= link_to 'Empty Your Cart', @cart, method: :delete, data: {confirm: 'Are you sure?'} %>
+      <%= render 'carts/cart' %>
+      <br>
+      <h5>Total:
+        <%=number_to_currency @cart.total_price %>
+      </h5>
+      <br>
+      <%= button_to 'Checkout', new_order_path, method: :get %>
+      <%= link_to 'Back to Store', all_products_path %>
+      <br>
+      <%= link_to 'Empty Your Cart', @cart, method: :delete, data: {confirm: 'Are you sure?'} %>
 
-        </div>
-      </div>
-    </section>
+    </div>
+  </div>
+</section>
