Added js tag to application.html.erb, script in new.html.erb, added div to form partial. Added braintree gem and installed.

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -4,7 +4,14 @@
     <h1>Your Order</h1>
    </div>
   </div><!--end of row-->
- 
+
 <br>
 <%= render 'form' %>
 <br>
+
+<!-- Script for Braintree -->
+<script>
+braintree.setup('CLIENT_TOKEN_FROM_SERVER', 'dropin', {
+  container: 'payment-form'
+});
+</script>
