--- a/app/views/common/_categorycontents.html.erb
+++ b/app/views/common/_categorycontents.html.erb
@@ -9,9 +9,11 @@
           <div class="product-details text-center">
             <div class="align-vertical">
               <h3><%= product.name %></h3>
-              <a href="index.html#" class="btn btn-primary">
-                <i class="fa fa-shopping-cart"></i>
+              <%= button_to product_items_path(product_id: product), class: 'accent-bg btn btn-default' do %>
+                  <i class="fa fa-shopping-cart"></i>
                 Add to cart</a>
+                <% end %>
+
               <p class="product-price">
                 <%= number_to_currency product.price %></p>
             </div>
