--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -42,6 +42,7 @@
               </div>
             </div>
             <div class="form-group">
+              <div id="payment-form"></div>
                 <div class="col-md-10">
                   <%= f.submit 'Place Order' %>
             </div>
