Added config data to production.rb, created application.yml and added braintree keys, updated orders.new and the orders controller.

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -11,7 +11,7 @@
 
 <!-- Script for Braintree -->
 <script>
-braintree.setup('CLIENT_TOKEN_FROM_SERVER', 'dropin', {
+braintree.setup('<%= @client_token %>', 'dropin', {
   container: 'payment-form'
 });
 </script>
