--- a/app/views/common/_categorycontents.html.erb
+++ b/app/views/common/_categorycontents.html.erb
@@ -1,6 +1,6 @@
 
 <section class="products-grid">
-    <h2 class="page-title" style = "text-align:center"><%= @category.name %></span><span class="accent-color">.</span></h2>
+    <h2 class="page-title" style = "text-align:center"><%= @category.name %><span class="accent-color">.</span></h2>
   <div class="container">
     <div class="row products-container">
       <% @category.products.each do |product| %>
@@ -11,7 +11,7 @@
               <h3><%= product.name %></h3>
               <%= button_to product_items_path(product_id: product), class: 'accent-bg btn btn-default' do %>
                   <i class="fa fa-shopping-cart"></i>
-                Add to cart</a>
+                Add to cart
                 <% end %>
 
               <p class="product-price">
