--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-<h1 class="page-title" style = "text-align:center"><%= @contactPage.title %></span><span class="accent-color">.</span></h1>
+<h1 class="page-title" style = "text-align:center"><%= @contactPage.title %><span class="accent-color">.</span></h1>
 
     </div>
   </div>
