Ran rubocop autocorrect on admin folders. fixed remaining error.

--- a/app/views/common/_ad.html.erb
+++ b/app/views/common/_ad.html.erb
@@ -6,11 +6,11 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-5 col-sm-offset-7 text-right">
-        
+
           <h2 class="page-title">THC and CBD<span class="accent-color">.</span></h2>
         <p class="description">are the most popular cannabinoids marijuana makes, but they have very different effects on you. In general, THC is responsible for the stimulating, elevating, euphoric part of your cannabis high, although it has many medicinal
           effects that aren’t part of a cannabis “high.” CBD is responsible for body effects such as pain.</p>
-        <a href="index.html#" class="btn btn-primary">Shop Now</a>
+        <a href="/products" class="btn btn-primary">Shop Now</a>
       </div>
     </div>
     <!--end of row-->
