--- a/app/views/common/_header.html.erb
+++ b/app/views/common/_header.html.erb
@@ -91,7 +91,7 @@
         <h1>THC-easoned to perfection</h1>
         <p>Nothing but the finest craft cannabis that our country has to offer</p>
         <div class="button-group">
-          <a href="index.html#" class="btn btn-default">Shop Now</a>
+          <a href="/products" class="btn btn-default">Shop Now</a>
 
         </div>
       </div>
