Updated rubocop to be rid of any errors

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-<h1 class="page-title" style = "text-align:center"><%= @aboutPage.title %><span class="accent-color">.</span></h1>
+<h1 class="page-title" style = "text-align:center"><%= @about_page.title %><span class="accent-color">.</span></h1>
 
 						</div>
 					</div>
@@ -12,7 +12,7 @@
 							<p class="subtitle">Beyond Medication</p>
 						</div>
 						<div class="col-md-8">
-							<%= @aboutPage.content %>
+							<%= @about_page.content %>
 						</div>
 					</div><!-- /.row -->
 				</div><!-- /.container -->
