--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-<h1 class="page-title" style = "text-align:center"><%= @contactPage.title %><span class="accent-color">.</span></h1>
+<h1 class="page-title" style = "text-align:center"><%= @contact_page.title %><span class="accent-color">.</span></h1>
 
     </div>
   </div>
@@ -12,7 +12,7 @@
       <p class="subtitle">Beyond Medication</p>
     </div>
     <div class="col-md-8">
-      <%= @contactPage.content %>
+      <%= @contact_page.content %>
     </div>
   </div><!-- /.row -->
 </div><!-- /.container -->
