Updated about and contact page to include raw tag to allow html tags in admin content/

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,7 +12,7 @@
 							<p class="subtitle">Beyond Medication</p>
 						</div>
 						<div class="col-md-8">
-							<%= @about_page.content %>
+							<%=raw @about_page.content %>
 						</div>
 					</div><!-- /.row -->
 				</div><!-- /.container -->
