--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -12,7 +12,7 @@
       <p class="subtitle">Beyond Medication</p>
     </div>
     <div class="col-md-8">
-      <%= @contact_page.content %>
+      <%=raw @contact_page.content %>
     </div>
   </div><!-- /.row -->
 </div><!-- /.container -->
